# faag_cli

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  delete-workflows.yml  deployment.yml  python-app.yml
app/: __init__.py
app/config/: config.py
app/connection/: __init__.py
app/controller/: __init__.py
app/model/: __init__.py
app/schemas/response/: common_response_schema.py  user_response_schema.py
app/service/: sample_service.py
app/utils/: logger.py
faag/: faag.py
faag/constants/: constants.py
faag/core/: app_generator.py
faag/templates/base/: fast__init__.jinja  flask__init__.jinja
faag/templates/config/: config.jinja  constants.jinja
faag/templates/dao/: sample_dao.jinja
faag/templates/service/: sample_service.jinja
faag/utils/: faag_utils.py  templates_loader.py
faag_cli/: __init__.py  faag.py
faag_cli/constants/: __init__.py  app_enums.py  app_types.py  constants.py  formatter_config.py  pylint_rules.py  ruff_rules.py
faag_cli/core/: __init__.py  app_generator.py  feature_generator.py
faag_cli/templates/: .env.jinja  .flaskenv.jinja  .gitignore.jinja  __init__.jinja  common_response_schema.jinja  config.jinja  connection_init.jinja  controller_init.jinja  fast__init__.jinja  fast_api__init__.jinja  fast_api_init.jinja  flask__init__.jinja  gitignore.jinja  model__init__.jinja  sample_service.jinja  service__init__.jinja
faag_cli/templates/base/: __init__.jinja  fast__init__.jinja  flask__init__.jinja
faag_cli/templates/config/: config__init__.jinja  constants.jinja
faag_cli/templates/connection/: connection__init__.jinja  mongoengine_connection.jinja  sqlalchemy_connection.jinja  sqlite_connection.jinja
faag_cli/templates/controller/: controller__init__.jinja  fast_controller.jinja  fast_controller__init__.jinja  flask_controller.jinja  flask_controller__init__.jinja  sample_controller.jinja
faag_cli/templates/dao/: dao__init__.jinja  sample_dao.jinja
faag_cli/templates/model/: model__init__.jinja  mongoengine_mode.jinja  sqlalchemy_model.jinja
faag_cli/templates/schemas/: schemas__init__.jinja
faag_cli/templates/schemas/response/: common_response_schema.jinja  user_response_schema.jinja
faag_cli/templates/service/: sample_service.jinja  service__init__.jinja
faag_cli/templates/utils/: logger.jinja  utils__init__.jinja
faag_cli/utils/: __init__.py  default_help_message.py  faag_utils.py  poetry_template_generator.py  templates_loader.py
src/templates/: config_init.jinja  constants.jinja  private_route.jinja  response_init.jinja
tests/: generate_app.sh
