[tool.poetry]
name = "faag"
version = "0.0.2"
description = "Flask/FastAPI Architecture Application Generator"
authors = ["Vetrichelvan <pythonhub.py@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["notion", "api", "wrapper"]
packages = [{ include = "pynotionclient", from = "src" }]
repository = "https://github.com/pythonhubpy/FAAG"
homepage = "https://github.com/pythonhubpy/FAAG"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = { extras = ["d"], version = "^22.8.0" }
pylint = "^2.15.3"
pylint-quotes = "^0.2.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
