[tool.poetry]
name = "faag_cli"
version = "0.0.1-dev"
description = "Flask/FastAPI Architecture Application Generator"
authors = ["Vetrichelvan <pythonhub.py@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["FastAPI", "Flask", "SQLAlchemy", "Poetry", "Python", "CLI"]
packages = [{ include = "faag_cli" }]
repository = "https://github.com/pythonhubpy/FAAG"
homepage = "https://github.com/pythonhubpy/FAAG"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
faag = "faag_cli.faag:typer_app"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
typer = { extras = ["all"], version = "^0.6.1" }

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
pylint-quotes = "^0.2.3"
pre-commit = "^2.20.0"
black = {extras = ["d"], version = "^22.10.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
