[tool.poetry]
name = "faag_cli"
version = "0.2.1"
description = "Flask/FastAPI Architecture Application Generator"
authors = ["Vetrichelvan <pythonhubdev@gmail.com>", "Devzone <devzonehq@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["FastAPI", "Flask", "SQLAlchemy", "Poetry", "Python", "CLI", "API", "Application", "Generator", "Architecture", "Faag"]
packages = [{ include = "faag_cli" }]
repository = "https://github.com/DevzoneCommunity/faag_cli"
homepage = "https://github.com/DevzoneCommunity/faag_cli"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
faag = "faag_cli.faag:typer_app"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
typer = { extras = ["all"], version = ">=0.6.1,<0.8.0" }
python-semantic-release = "^7.33.2"
python-box = "^7.0.1"
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^23.3.0" }
pre-commit = "^3.2.2"
ruff = "^0.0.257"
isort = "^5.12.0"
mypy = "^1.1.1"
types-setuptools = "^67.6.0.7"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"


[tool.ruff]
src = ["."]
target-version = "py311"
fix = true
show-source = true
line-length = 120
select = ["E", "F", "N801", "N802", "N803", "N805", "N806"]

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"


[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.isort]
combine-as-imports = true


[tool.mypy]
strict = true

[tool.semantic_release]
version_variable = [
    "faag_cli/faag.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true